Fixed menuarea alignment on messages page.

--- a/style.css
+++ b/style.css
@@ -534,6 +534,10 @@
 		margin-left: 2px !important;
 	}
 	
+	.messages-page .menuarea {
+		padding: 6px 8px 4px 20px !important;
+	}
+	
 	/*****************************
 	******* CONTENT GENERAL ******
 	******************************/
